# TechBlog

./: LICENSE  README.md  pyproject.toml
blogging-website/: package-lock.json  package.json
tech-blog/: package-lock.json  package.json
tech-blog/public/: index.html
tech-blog/src/: App.js  index.css
tech-blog/src/components/: AboutCard.jsx  BlogCard.jsx  BlogCard.module.css  BlogList.jsx  BlogList.module.css  BlogPost.jsx  BlogPost.module.css  ContactForm.jsx  Footer.jsx  Footer.module.css  Header.jsx  HeroBlock.jsx  HeroCard.jsx  HeroCard.module.css  ImageComponent.jsx  ImageComponent.module.css  Navbar.jsx  Navbar.module.css  ProjectCard.jsx  ProjectCard.module.css  SubsCard.jsx  SubsCard.module.css
tech-blog/src/pages/: About.js  About.module.css  Blog.js  Blog.module.css  Blogs.js  Contact.js  Contact.module.css  Homepage.js  Homepage.module.css  Projects.js  Projects.module.css  Test.js
techblogBackend/: .env  db.sqlite3  manage.py
techblogBackend/blogs/: admin.py  models.py
techblogBackend/blogs/api/: serializers.py  urls.py  views.py
techblogBackend/blogs/migrations/: 0001_initial.py  0002_image_image_name.py  0002_remove_idea_idea.py  0003_alter_blog_date.py  0003_rename_image_blogimage.py  0004_rename_key_blog_blogid.py
techblogBackend/techblogBackend/: asgi.py  settings.py  urls.py  wsgi.py
