[tool.poetry]
name = "techblog"
version = "0.1.0"
description = "Full stack Blogging website built with React and Django"
authors = ["rajavee-srivastava <rajaveesrivastava@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
